<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">快记账Ⅱ</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_income">新收入</string>
    <string name="title_expense">新支出</string>
	<string name="category">类别</string>
	<string name="categorys">类别:</string>
	<string name="date">日期</string>
	<string name="time">时间</string>
	<string name="times">时间:</string>
	<string name="number">金额</string>
	<string name="details_title">流水</string>
	<string name="analysis">分析</string>
	<string name="notification_settings_title">消息设置</string>
	<string name="add">添加</string>
	<string name="today">今天</string>
	<string name="nowin">现在进入</string>
	<string name="sponsor_msg">您的支持是我最大的开发动力！</string>
	<string name="sponsor_title">赞助一下</string>
	<string name="settings">设置</string>
	<string name="count">统计</string>
	<string name="billing">记账</string>
	<string name="addFlags">添加标签</string>
	<string name="expenseFlags">支出标签</string>
	<string name="incomeFlags">收入标签</string>
	
	<string name="totalBill">[总账]</string>
	<string name="remain">结余:</string>
	<string name="incomes">收入:</string>
	<string name="income">收入</string>
	<string name="newIncome">新收入</string>
	
	
	<string name="expenses">支出：</string>
	<string name="expense">支出</string>
	<string name="newExpense">新支出</string>
	
	
	
	<string name="expenseAnalysis">[支出记录分析]</string>
	<string name="yearExpense">本年度支出情况</string>
	<string name="incomeAnalysis">[收入记录分析]</string>
	<string name="yearIncome">本年度收入情况</string>
	<string name="todayIncome">当日收入:</string>
	<string name="todayExpense">当日支出:</string>
	<string name="accountRemain">账户余额:</string>
	<string name="yuan">元</string>
	<string name="incomeAndExpenseDetails">收支详情</string>
	<string name="amount">金额</string>
	<string name="amounts">金额:</string>
	<string name="details">明细</string>
	<string name="switchs">切换</string>
	<string name="options">选项</string>
	<string name="exportData">导出数据</string>
	<string name="sponsor">赞助一下</string>
	<string name="appRecommend">应用推荐</string>
	
	
	
	
</resources>
