<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:background="@color/white" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/newIncome" 
        android:textSize="30dp"
        android:textColor="@color/black"/>
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@color/themecolor"
       />
    <!-- 金额 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amounts" />

        <EditText
            android:id="@+id/et_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yuan" />
    </LinearLayout>
    <!-- 时间 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/times" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="21:29:16" />
    </LinearLayout>

    <!-- 类别 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/categorys" />

        <Spinner
            android:id="@+id/spinner_income_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
	

</LinearLayout>