<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#73D39C"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24dp" />

    <LinearLayout
        android:id="@+id/top_ly"
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tx_billing"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/billing"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/tx_count"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/count"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/tx_settings"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="19dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/cursor"
        android:layout_width="120dp"
        android:layout_height="4dp"
        android:layout_below="@id/top_ly"
        android:scaleType="matrix"
        android:src="@drawable/cursor" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>