<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#73D39C"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/analysis"
            android:textColor="@color/white"
            android:textSize="24dp" />
    </LinearLayout>

    <org.itst.scrollview.ObservableScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:text="@string/totalBill"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/remain"
                        android:textColor="@color/deepgrey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/incomes"
                        android:textColor="@color/deepgrey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/expenses"
                        android:textColor="@color/deepgrey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="15"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tx_analysis_total"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="100"
                        android:textColor="@color/blue" />

                    <TextView
                        android:id="@+id/tx_analysis_income"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="100"
                        android:textColor="@color/green" />

                    <TextView
                        android:id="@+id/tx_analysis_outcome"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="100"
                        android:textColor="@color/red" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:text="@string/expenseAnalysis"
                android:textColor="@color/black"
                android:textSize="24dp" />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/yearExpense"
                android:textSize="13dp" />
			  <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/expense_bar_chart"
                android:layout_width="fill_parent"
                android:layout_height="400dp"
                android:layout_marginBottom="30dp"
                android:gravity="center" />
            
            
            
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:text="@string/incomeAnalysis"
                android:textColor="@color/black"
                android:textSize="24dp" />
            
            
			<TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/yearIncome"
                android:textSize="13dp" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/income_bar_chart"
                android:layout_width="fill_parent"
                android:layout_height="400dp"
                android:layout_marginBottom="30dp"
                android:gravity="center" />
        </LinearLayout>
    </org.itst.scrollview.ObservableScrollView>

</LinearLayout>