<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#73D39C"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/addFlags"
        android:textColor="@color/white"
        android:textSize="24dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tx_add_expense_flags"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/expenseFlags"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/tx_add_income_flags"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/incomeFlags"
            android:textSize="19dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/add_flag_cursor"
        android:layout_width="180dp" 
        android:layout_height="4dp"
        android:scaleType="matrix"
        android:src="@drawable/cursor" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <android.support.v4.view.ViewPager
        android:id="@+id/add_flag_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
