<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="5"
        android:orientation="horizontal" >

        <!-- 有关钱的 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="horizontal" >

            <!-- 条目 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="6dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/todayIncome" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/todayExpense" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accountRemain" />
            </LinearLayout>

            <!-- 数目 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tx_TodayIncome"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:minWidth="50dp"
                    android:text="0" />

                <TextView
                    android:id="@+id/tx_TodayExpense"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:minWidth="34dp"
                    android:text="0" />

                <TextView
                    android:id="@+id/tx_Total"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:minWidth="34dp"
                    android:text="0"
                    android:textColor="@color/red" />
            </LinearLayout>

            <!-- 元 -->

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:gravity="right"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/yuan" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/yuan" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/yuan" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/themecolor" />
        <!-- 日期栏 -->

        <TextView
            android:id="@+id/tx_month"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/themecolor"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/tx_year"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="bottom|center"
            android:textColor="@color/themecolor"
            android:textSize="25dp" />
    </LinearLayout>

    <!-- list表头 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@color/themecolor"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView 
            android:id="@+id/tx_choose_date_type"
            android:text="@string/today"
            android:layout_width="125dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/incomeAndExpenseDetails"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/amount"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_weight="13" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/themecolor" >

        <Button
            android:id="@+id/btn_income"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="@color/themecolor"
            android:text="@string/income"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <Button
            android:id="@+id/btn_expense"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="@color/themecolor"
            android:text="@string/expense"
            android:textColor="@color/white"
            android:textSize="24dp" />
    </LinearLayout>

</LinearLayout>