<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tx_lastmonth"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@drawable/last_month_shape"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="17dp" >
        </TextView>

        <TextView
            android:id="@+id/tx_currentmonth"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:textColor="@color/themecolor"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/tx_nextmonth"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@drawable/next_month_shape"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="17dp" >
        </TextView>
    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/spread_pie_chart"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_weight="4"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/themecolor" >

        <TextView
            android:id="@+id/tx_analysis"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/themecolor"
            android:gravity="center"
            android:text="@string/analysis"
            android:textColor="@color/white"
            android:textSize="24dp" />
        
        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tx_currentmonth_details"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/themecolor"
            android:gravity="center"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tx_change"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/themecolor"
            android:gravity="center"
            android:text="@string/switchs"
            android:textColor="@color/white"
            android:textSize="24dp" />
    </LinearLayout>

</LinearLayout>